# NLBProject

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: mc_maze_lagged_pca.yaml  mc_maze_smoothing.yaml
configs/benchmarks/: mc_maze_lagged_pca.yaml  mc_maze_lagged_pca_history_sweep.yaml  mc_maze_lagged_pca_single.yaml  mc_maze_lagged_ridge.yaml  mc_maze_lagged_ridge_single.yaml  mc_maze_lagged_rrr.yaml  mc_maze_static_pca.yaml  mc_maze_static_ridge.yaml
results/benchmark_runs/: experiment_log.md  model_comparison.csv  model_comparison.md
results/benchmark_runs/lagged_pca_history_sweep/: metrics.csv
results/benchmark_runs/lagged_pca_single/: metrics.csv
results/benchmark_runs/lagged_ridge_single/: metrics.csv
results/benchmark_runs/lagged_rrr_sweep/: metrics.csv
results/benchmark_runs/static_pca/: metrics.csv
results/benchmark_runs/static_ridge/: metrics.csv
results/mc_maze/: metrics.csv  summary.md
scripts/: __init__.py  download_mc_maze.py  generate_portfolio_artifacts.py  get_data.py  run_experiment.py
src/nlb_project/: __init__.py  config.py  data_contract.py  io_utils.py  pipeline.py  reporting.py  smoothing.py
src/nlb_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nlb_project/models/: __init__.py  lagged_pca_latent_regression.py  lagged_reduced_rank_regression.py  (+4 more)
tests/: test_data_contract.py  test_imports.py  test_lagged_models.py  test_pca_latent_regression.py  test_reporting.py  test_ridge_direct.py  test_smoke_eval.py  test_smoothing.py  test_smoothing_param_effect.py
